# winget_dart

./: .clang-tidy  .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  codecov.yml  dart_test.yaml  ffigen.yaml  pubspec.yaml
.github/workflows/: ci.yml
example/: example.dart  get_updates.dart  install.dart  list_catalogs.dart  list_installed.dart  search.dart  simulate_install.dart
example/winget_catalog/: .metadata  README.md  analysis_options.yaml  pubspec.yaml
example/winget_catalog/lib/: app.dart  main.dart
example/winget_catalog/lib/models/: view_models.dart
example/winget_catalog/lib/providers/: operation_provider.dart  packages_provider.dart  winget_provider.dart
example/winget_catalog/lib/screens/: catalog_screen.dart  installed_screen.dart  shell.dart  updates_screen.dart
example/winget_catalog/lib/theme/: app_theme.dart
example/winget_catalog/lib/widgets/: package_card.dart  package_list.dart  progress_sheet.dart  search_box.dart
example/winget_catalog/test/: widget_test.dart
example/winget_catalog/windows/: CMakeLists.txt
example/winget_catalog/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
lib/: winget_dart.dart
lib/src/: wg_client.dart  wg_transaction.dart
lib/src/bindings/: winget_bindings.dart
lib/src/bridge/: native_winget_bridge.dart  winget_bridge.dart
lib/src/codec/: message_decoder.dart
lib/src/exceptions/: wg_cancelled.dart  wg_elevation_error.dart  wg_exception.dart  wg_not_available.dart
lib/src/models/: wg_catalog.dart  wg_install_plan.dart  wg_package.dart  wg_progress.dart
native/: CMakeLists.txt
native/src/: message_codec.cpp  message_codec.h  winget_bridge.cpp  winget_bridge.h  winget_manager.cpp  winget_manager.h  winget_transaction.cpp  winget_transaction.h
native/test/: CMakeLists.txt  bridge_test.cpp
scripts/: clang-format.ps1  clang-tidy.ps1
test/: wg_client_test.dart  wg_transaction_test.dart
test/codec/: message_decoder_test.dart
test/exceptions/: wg_exception_test.dart
test/helpers/: fake_winget_bridge.dart
test/integration/: live_test.dart
test/models/: wg_catalog_test.dart  wg_install_plan_test.dart  wg_package_test.dart  wg_progress_test.dart
